--- a/02-06-22/index.html
+++ b/02-06-22/index.html
@@ -3,9 +3,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Code Wars 02/06/2022</title>
   </head>
   <body>
+    <h1>Code Wars</h1>
+    <h2>02/06/2022</h2>
+    <p>blahblahblah</p>
+    <p>this is just for the console aspect</p>
     <script src="script.js"></script>
   </body>
 </html>
